<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/homepage">


    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:layout_marginTop="@dimen/twentyDp"
        android:padding="@dimen/tenDp"
        android:inputType="text"
        android:textColorHint="@color/white"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/ageEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twentyDp"
        android:padding="@dimen/tenDp"
        android:hint="@string/enter_age"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="text" />

    <EditText
        android:id="@+id/occupationEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twentyDp"
        android:padding="@dimen/tenDp"
        android:hint="@string/occupation"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="text" />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twentyDp"
        android:padding="@dimen/tenDp"
        android:hint="@string/description"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="text" />
    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:onClick="goToSecondActivity"
        android:layout_marginLeft="@dimen/twentyDp"
        android:layout_marginTop="@dimen/twentyDp"
        android:layout_marginBottom="@dimen/twentyDp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twentyDp"
        android:padding="@dimen/tenDp"
        android:text="@string/my_name"
        android:textColor="@color/white" />

</LinearLayout>
</ScrollView>