<resources>
    <string name="app_name">HelloWorld</string>
    <string name="my_name">Peter Torres 6/8/21</string>
    <string name="hello_world">Hello World!</string>
    <string name="menu_settings">Settings</string>
    <string name="Welcome">Welcome!</string>
    <string name="enter_name">name</string>
    <string name="submit">Submit!</string>
    <string name="message_on_login">Message On Login</string>
    <string name="email_address">email address</string>
    <string name="username">username</string>
    <string name="date_of_birth">date of birth</string>
    <string name="select_birthday">Select Birthday...</string>
    <string name="home">Home</string>
    <string name="enter_age">age</string>
    <string name="description">description</string>
    <string name="occupation">occupation</string>
    <string name="profile">Profile</string>
    <string name="matches">Matches</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="your_matches_go_here">Your matches go here!</string>
    <string name="settings_go_here">Settings go here!</string>
    <string name="matches_description">Matches description.</string>
    <string name="here_are_your_matches">Here are your matches!</string>
    <string name="match_name">Match Name</string>
    <string name="bella">Bella</string>
    <string name="coco">Coco</string>
    <string name="cookie">Cookie</string>
    <string name="evie">Evie</string>
    <string name="honey">Honey</string>
    <string name="lola">Lola</string>
    <string name="luna">Luna</string>
    <string name="nala">Nala</string>
    <string name="sky">Sky</string>
    <string name="star">Star</string>
    <string name="you_liked">You liked </string>
    <string name="exclamation">!</string>
    <string name="daily_matches_reminder">Please pick a daily matches reminder time below:</string>
    <string name="time_selected" />
    <string name="set_reminder">Set Reminder!</string>
    <string name="your_reminder_time_is">Your reminder time is:</string>
    <string name="please_select_distance">Please select maximum distance:</string>
    <string name="please_select_gender">Please select gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="please_select_your_privacy">Please select your privacy:</string>
    <string name="privacy">Private</string>
    <string name="interested_age_range">Please select interested age range:</string>
    <string name="enable_location">Enable location</string>
    <string name="location_message">Please enable location</string>
    <string name="location_settings">Location Settings</string>
    <string name="location_cancel">Location Cancel</string>
    <string-array name="distance_array">
        <item>5 Miles</item>
        <item>10 Miles</item>
        <item>15 Miles</item>
        <item>20 Miles</item>
        <item>Over 20 Miles</item>
    </string-array>
    <string-array name="age_array">
        <item>18 - 25</item>
        <item>25 - 30</item>
        <item>30 - 35</item>
        <item>35 - 40</item>
        <item>40 - 45</item>
        <item>45 - 50</item>
        <item>Over 50</item>
    </string-array>

</resources>