<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/timeSelectionReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/tenDp"
        android:textSize="@dimen/sixteenSp"
        android:text="@string/daily_matches_reminder"/>

    <TimePicker
        android:id="@+id/dailyMatchesReminderTimePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timeSelectionReminder"/>

    <Button
        android:id="@+id/dailyMatchesReminderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dailyMatchesReminderTimePicker"
        android:layout_centerHorizontal="true"
        android:text="@string/set_reminder" />

    <TextView
        android:id="@+id/yourReminderTimeIs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dailyMatchesReminderButton"
        android:padding="@dimen/tenDp"
        android:text="@string/your_reminder_time_is"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/timeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/yourReminderTimeIs"
        android:gravity="center"
        android:padding="@dimen/tenDp"
        android:text="@string/time_selected" />

    <TextView
        android:id="@+id/maximumDistanceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timeTextView"
        android:padding="@dimen/tenDp"
        android:text="@string/please_select_distance"
        android:textSize="@dimen/sixteenSp"
        android:textStyle="italic" />

    <Spinner
        android:id="@+id/distanceSearchSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/maximumDistanceTextView" />

    <TextView
        android:id="@+id/genderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/distanceSearchSpinner"
        android:text="@string/please_select_gender"
        android:textSize="@dimen/sixteenSp"
        android:padding="@dimen/tenDp"
        android:layout_marginTop="@dimen/twentyDp"
        android:textStyle="italic" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/genderGroup"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/genderTextView"
        android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/radioGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />

    </RadioGroup>
    </LinearLayout>

    <TextView
        android:id="@+id/privacyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/genderGroup"
        android:padding="@dimen/tenDp"
        android:text="@string/please_select_your_privacy"
        android:textSize="@dimen/sixteenSp"
        android:textStyle="italic" />

    <CheckBox
        android:id="@+id/privacyCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/privacyTextView"
        android:text="@string/privacy" />

    <TextView
        android:id="@+id/ageRangeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/privacyCheckBox"
        android:text="@string/interested_age_range"
        android:textSize="@dimen/sixteenSp"
        android:textStyle="italic"
        android:padding="@dimen/tenDp" />

    <Spinner
        android:id="@+id/ageRangeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ageRangeTextView" />

</RelativeLayout>