<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile"
            android:icon="@drawable/profile_icon"/>
        <item
            android:id="@+id/nav_matches"
            android:title="@string/matches"
            android:icon="@drawable/matches_icon"/>
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings"
            android:icon="@drawable/settings_icon"/>
    </group>
</menu>